# qguider

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: _ui.py  branching.py  cli.py  pseudo.py
qguider/: __init__.py  _logging.py  agg.py  api.py  collections.py  downloader.py  exporter.py  importer.py  models.py  parser.py  query.py  semester.py
tests/: cs50_parsed.json  qguide_ex.py  test_download.py  test_parser.py  test_query.py
tests/fixtures/: cs50.json  phs2000a.json  zuluaa.json
