[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qguider"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "pydantic",
    "tdqm>=0.0.1",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
