[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qguider"
version = "1.0.0"
description = "A Python package to download and scrape QGuides."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "pydantic",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
